templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: confluence
  name: confluence
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: confluence
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/confluence-network-bridge: "true"
        io.kompose.service: confluence
    spec:
      containers:
        - env:
            - name: TZ
              value: "Asia/Ho_Chi_Minh"
            - name: ATL_PROXY_PORT
              value: "443"
            - name: ATL_TOMCAT_SCHEME
              value: "https"
            - name: ATL_TOMCAT_SECURE
              value: "true"
            - name: JAVA_OPTS
              value: "-javaagent:/atlassian-agent.jar"
            - name: ATL_PROXY_NAME
              value: "confluence.baityapp.online"
            - name: JVM_CODE_CACHE_ARGS
              value: "-XX:InitialCodeCacheSize=512m -XX:ReservedCodeCacheSize=1g"
            - name: JVM_MAXIMUM_MEMORY
              value: "3g"
            - name: JVM_MINIMUM_MEMORY
              value: "512m"
          image: minhlb314/confluence:1.0
          securityContext:
            runAsUser: 0
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          name: confluence
          lifecycle:
            postStart:
              exec:
                command: ['/bin/sh', '-c',
                  'cp -Rf /temp/source/confluence/atlassian-agent1.jar /atlassian-agent.jar;
                   chown -R confluence:confluence /atlassian-agent.jar;'
                  ]
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "3Gi"
              cpu: "200m"
            limits:
              memory: "3Gi"
              cpu: "4000m"
          volumeMounts:
            - mountPath: /var/atlassian/application-data/jira
              name: confluence-vol
            - mountPath: /temp
              name: test-volume
      hostname: confluence
      restartPolicy: Always
      volumes:
        - name: confluence-vol
          persistentVolumeClaim:
            claimName: confluence-vol
        - name: test-volume
          persistentVolumeClaim:
            claimName: test-pvc
status: {}
