templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: confluence
  name: confluence
spec:
  ports:
    - name: "http"
      port: 8095
      targetPort: 8090
      nodePort: 31095
  type: NodePort
  selector:
    io.kompose.service: confluence
